--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "tree-sitter-htmldjango"
-description = "htmldjango grammar for the tree-sitter parsing library"
-version = "1.0.0"
-keywords = ["incremental", "parsing", "htmldjango"]
+name = "tree-sitter-htmltera"
+description = "htmltera grammar for the tree-sitter parsing library"
+version = "0.0.1"
+keywords = ["incremental", "parsing", "htmltera"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/interdependence/tree-sitter-htmldjango"
+repository = "https://github.com/tree-sitter/tree-sitter-htmltera"
 edition = "2018"
 license = "MIT"
 
@@ -20,7 +20,7 @@ include = [
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "~0.20"
+tree-sitter = "~0.20.10"
 
 [build-dependencies]
 cc = "1.0"
